--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <header>
         <h1 style="color: darkblue; text-align: center;">Prince Jericho Band</h1>
         <p style="text-align: center;">Feel the Rhythm. Live the Music.</p>
-        <img src="C:\Users\HP\Downloads\logo.webp" alt="Band performing"  style="display: block; margin: auto;">
+        <img src=""C:\Users\HP\Downloads\logo.webp"" alt="Band performing"  style="display: block; margin: auto;">
         <hr>
     </header>
 
@@ -84,8 +84,8 @@
     <!-- Gallery Section with Image -->
     <section id="gallery">
         <h2 style="color: orange;">Band Gallery</h2>
-        <img src="C:\Users\HP\Downloads\OIP.webp" style="display: block; margin: auto;">
-        <img src="C:\Users\HP\Downloads\OIP1.webp" width="800" height="300" style="display: block; margin: auto;">
+        <img src=""C:\Users\HP\Downloads\OIP1.webp"" style="display: block; margin: auto;">
+        <img src=""C:\Users\HP\Downloads\OIP.webp"" width="800" height="300" style="display: block; margin: auto;">
     </section>
     <hr>
 
